# Asistente-Financiero-Predictivo-Para-Emprendedores

./: README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/tests/: test_fake_reportes.py  test_faker.py  test_finsight.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/components/: DashboardClient.tsx  Navbar.tsx  Reports.tsx  ReportsClient.tsx  TransactionClient.tsx  TransactionForm.tsx  TransactionList.tsx
frontend/src/context/: GlobalContext.tsx
frontend/src/utils/: actions.ts
frontend1/: next.config.ts  package-lock.json  package.json
frontend1/src/app/: layout.tsx
frontend1/src/components/: Alerts.tsx  TransactionForm.tsx  TransactionList.tsx
frontend1/src/context/: GlobalContext.tsx
frontend1/src/types/: index.ts
frontend1/src/utils/: pdfGenerator.ts
frontend2/: README.md  codigo_fuente.txt  exportar_fuente.sh  package-lock.json  package.json  tree.txt
frontend2/src/: App.tsx  index.css  main.tsx
frontend2/src/components/: Alerts.tsx  Dashboard.tsx  Layout.tsx  Navbar.tsx  Reports.tsx  TransactionForm.tsx  TransactionList.tsx
frontend2/src/pages/: AboutPage.tsx  DashboardPage.tsx  ReportsPage.tsx  TransactionsPage.tsx
frontend2/src/store/: index.ts
frontend2/src/types/: index.ts
frontend2/src/utils/: categories.ts  pdfGenerator.ts
frontend_angular/: package-lock.json  package.json
frontend_angular/src/app/: app.html  app.routes.ts  app.ts
(+21 files in other folders)
