[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]
